scss/post.scss
@charset "UTF-8";
/* stylelint-disable color-hex-length */

/* Utilities */

/* see: https://css-tricks.com/books/volume-i/scale-typography-screen-size/ */
@function calculate-dynamic-font-size($min-size-em, $max-size-em) {
  @return calc(#{$min-size-em} - #{$max-size-em/1em - $min-size-em/1em} * (100vw - #{map-get($grid-breakpoints, "sm")}) / #{ map-get($grid-breakpoints, "lg")/1px - map-get($grid-breakpoints, "sm")/1px});
}

/*
 We keep this for an eventual uThere is a bug with Moodle PostCSS processor, that prevent using complex expression in calc expressions so we have
 to thread carefully https://tracker.moodle.org/browse/MDL-61879
*/

/*
  Fixes
 */

.dropdown-item a {
  display: block;
  width: 100%;
  color: $dropdown-link-color;
}


.jschooser .choosercontainer #chooseform .alloptions .option .typename {
  width: auto;
}

.notifytiny {
  margin-top: $navbar-height;
}

/* General */
.btn {
  border-radius: 3px;
}

.btn-icon-only {
  i {
    margin-right: 0 !important;
  }

  &:hover {
    i {
      color: white;
    }
  }
}

#page-footer {
  box-shadow: 0px -5px 2px rgba(0, 0, 0, 0.15);
}

#block-region-side-pre {
  padding-top: 1.25em;
}

#nav-drawer {
  overflow-x: hidden;
  // Hide the scrollbar
  -ms-overflow-style: none;  // IE 10+
  scrollbar-width: none;  // Firefox

  &::-webkit-scrollbar {
    display: none;  // Safari and Chrome
  }
}


.empty-placeholder-image-sm {
  width: 5em;
}

/*
 * Navigation bar colors and layout.
 */
.navbar {
  background-color: $savoir-darkgrey;
  padding: 0;
  .logo-in-navbar {
    max-height: $navbar-height;
    padding-top: 5px;
    padding-bottom: 5px;
  }
  div.logo {
    background-color: $primary;
    width: $drawer-width;
    height: $navbar-height; // For FFX
    margin-right: 0 !important;
  }

  .custom-savoir-menu {
    li {
      padding-left: 1rem !important;
      height: $navbar-height;
      /* padding-top: 5px;// Changing font to Monserrat*/

      &:hover {
        background-color: $savoir-lightergrey;
      }

      .savoir-site-name {
        font-weight: bolder;
        color: white;
      }
    }

    .dropdown-menu {
      .dropdown-item {
        /* Ugly hack to hide the language indicator link */
        &:last-child {
          display: none;
        }
      }
    }
  }

  .usermenu {
    padding-left: 1rem !important;
    height: $navbar-height;
    /* padding-top: 7px; // Changing font to Monserrat*/
    padding-right: 24px;

    &:hover {
      background-color: $savoir-lightergrey;
    }

    a.dropdown-toggle, .login a {
      color: $navbar-dark-active-color;

      @include hover-focus {
        color: $navbar-dark-active-color;
      }
    }

    /* WTF?? */
    .dropdown-menu {
      width: 120%;
      @media (min-width: map-get($grid-breakpoints, "md")) {
        left: 0;
      }
    }

    .dropdown-divider {
      display: none;
    }

    .login {
      color: white;
    }
  }

  #nav-message-popover-container, #nav-notification-popover-container {
    height: $navbar-height;
    /* padding-top: 7px; // Changing font to Monserrat*/
    padding-left: .5rem;
    padding-right: .5rem;
  }

  .dropdown-menu {
    padding-top: 0;
    padding-bottom: 0;
    border: none;

    .dropdown-item {
      padding: 1rem;
    }
  }

  /*  .dropdown.nav-item.show {
      background: $dropdown-bg;
    }
  */
}

[data-region="drawer-toggle"] {
  width: $drawer-width;
  @media (max-width: map-get($grid-breakpoints, "md")) {
    width: auto;
  }

  .drawer-img {
    max-height: 35px; /* To be consistent with front page logo size */
  }

  button {
    border: none;
    width: 100%;
    height: $navbar-height;

    &:focus {
      -webkit-box-shadow: none;
      -moz-box-shadow: none;
      box-shadow: none;
    }
  }
}

[data-region="drawer"] {
  padding-left: initial;
  padding-right: initial;
  background-color: $primary;

  .list-group-item {
    background-color: $primary;
    color: white;
    border: none;

    &:hover {
      background-color: $savoir-darkprimary;
    }
  }

  .list-group-item.active {
    background-color: darken($primary, 10%);
  }

  z-index: $zindex-navbar-fixed + 1; // Avoid the drop shadow
}

.card {
  border: none;
  background: none;
  box-shadow: none;
}

.card-body {
  border-radius: 3px;
  border: none;
  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
  border-top: 3px solid $primary;
}

.card-header {
  background-color: $primary;
  color: white;
}

/* Remove box shadow for first card body and on the header */

.card-no-border, #page-header .card-body {
  border-radius: initial;
  border: none;
  border-top: none;
  box-shadow: none;
}
/* ... */

